chore: resolve warnings